Add useHttpCache in the benchmark JSON schema
Signed-off-by: Andrea Lamparelli <a.lamparelli95@gmail.com>